--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -276,7 +276,7 @@
                     android:layout_marginHorizontal="10dp"
                     android:layout_marginTop="4dp"
                     android:fontFamily="@font/bebas"
-                    android:text="Takedown Accuracy"
+                    android:text="@string/takedown_accuracy"
                     android:textAlignment="center"
                     android:textColor="?attr/colorSurface"
                     android:textSize="16sp"
