--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -187,8 +187,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="?attr/colorSurfaceInverse"
-        android:paddingBottom="15dp"
         android:orientation="vertical"
+        android:paddingBottom="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -292,6 +292,23 @@
                     app:layout_constraintGuide_percent="0.5" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/share_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/bebas"
+                android:text="Share Profile"
+                android:textColor="?attr/colorOnTertiaryContainer"
+                android:textSize="16sp"
+                app:backgroundTint="?attr/colorTertiaryContainer"
+                app:backgroundTintMode="add"
+                app:cornerRadius="8dp"
+                app:icon="@drawable/share_icon"
+                app:iconGravity="textEnd"
+                app:iconTint="?attr/colorOnTertiaryContainer" />
 
         </LinearLayout>
 
